@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  10 Aug 2008; Jack Miller (TheMoken) <jack@codezen.org>
+  -canto-0.4.3-r1.ebuild, +canto-0.4.4.1.ebuild:
+  Version bump. Remove sed hacks.
+
   03 Aug 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
   canto-0.4.3-r1.ebuild, canto-9999-r1.ebuild:
   Simplify
